--- a/내부-면접용-Web문제/views/board/board_list.hbs
+++ b/내부-면접용-Web문제/views/board/board_list.hbs
@@ -1,4 +1,54 @@
-{{#each board_list}}
-    <a href="board/view/{{no}}"><span>no:{{no}} title:{{title}} name:{{name}}</span></a>
-    <br>
-{{/each}}
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>test</title>
+<link rel="stylesheet" href="../static/stylesheets/test.css" type="text/css" />
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.js"></script>
+</head>
+<body>
+    <div class="container">
+        <div id="board">
+    <table id="table_board" class="list">
+        <colgroup>
+            <col width="150">
+            <col width="60%">
+            <col width="250">
+            <col width="100">
+            <col width="150">
+        </colgroup>
+        <thead>
+            <tr>
+                <th>번호</th>
+                <th>제목</th>
+                <th colspan="3">닉네임</th>
+                {{!-- <th>날짜</th>
+                <th>조회수</th> --}}
+            </tr>
+        </thead>
+        <tbody>
+            {{#if board_list}}
+                {{#each board_list}}           
+                    <tr>
+                        <td>{{no}}</td>
+                        <td><a href="/board/view/{{no}}">{{title}}</a></td>
+                        <td colspan="3">{{name}}</td>
+                    </tr>
+                {{/each}}
+            {{else}}
+                    <tr>
+                        <td colspan="5">게시글이 존재하지않습니다.</td>
+                    </tr>
+            {{/if}}
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="5">
+                    <a href="/board/write">글쓰기</a>
+                </td>
+            </tr>
+        </tfoot>
+    </table>
+</div>
+</body>
+</html>
