--- a/내부-면접용-Web문제/views/main.hbs
+++ b/내부-면접용-Web문제/views/main.hbs
@@ -5,6 +5,9 @@
     {{else}}
         <h1>You are not admin</h1>
     {{/if}}
+    <a href="/users/logout">logout</a>
 {{else}}
 <h1>not logined</h1>
+<a href="/users/login">login</a>
+<a href="/users/login">register</a>
 {{/if}}
