Fix: async 제거 및 값 전달 안되는 현상 해결
- 현 상황에서 Express 비동기 Error 처리가 어려워 async 제거
- 이전에 main으로 adminCheck값을 제대로 넘기지 못한 현상 해결

--- a/내부-면접용-Web문제/views/main.hbs
+++ b/내부-면접용-Web문제/views/main.hbs
@@ -2,9 +2,11 @@
     <h1>hello {{username}}</h1>
     {{#if isAdmin}}
         <h1>You are Admin</h1>
+        <h1>Flag Here : ST4RT{##########blocked#########}</h1>
     {{else}}
         <h1>You are not admin</h1>
     {{/if}}
+    <a href="/board">board</a>
     <a href="/users/logout">logout</a>
 {{else}}
 <h1>not logined</h1>
